fix: fixes pr comments