@@ -1,5 +1,6 @@
 package com.epam.aidial.keycloak.helpers.provider;
 
+import com.epam.aidial.keycloak.helpers.exception.GraphApiException;
 import com.epam.aidial.keycloak.helpers.model.IdpType;
 import com.epam.aidial.keycloak.helpers.model.UserAttributes;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -7,8 +8,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.io.InputStream;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.Base64;
 
 /**
@@ -18,11 +22,12 @@ import java.util.Base64;
 @Slf4j
 public class MsGraphUserAttributesProvider implements UserAttributesProvider {
     private static final String GRAPH_API_BASE = "https://graph.microsoft.com/v1.0";
-    private static final String USER_PROFILE_URL = "%s/me?$select=jobTitle,displayName";
-    private static final String ME_PHOTO_URL = "%s/me/photos/48x48/$value";
+    private static final String USER_PROFILE_URL = GRAPH_API_BASE + "/me?$select=jobTitle,displayName";
+    private static final String ME_PHOTO_URL = GRAPH_API_BASE + "/me/photos/48x48/$value";
     private static final String DATA_URI_FORMAT = "data:%s;base64,%s";
     private static final String DEFAULT_PHOTO_MIME_TYPE = "image/jpeg";
 
+    private final HttpClient httpClient = HttpClient.newHttpClient();
     private final ObjectMapper mapper = new ObjectMapper();
 
     @Override
@@ -48,72 +53,85 @@ public class MsGraphUserAttributesProvider implements UserAttributesProvider {
 
         } catch (Exception e) {
             log.error("Failed to fetch user attributes from Microsoft Graph", e);
-            throw new RuntimeException("Failed to fetch user attributes from Microsoft Graph", e);
+            throw new GraphApiException("Failed to fetch user attributes from Microsoft Graph", e);
         }
     }
 
-    private HttpURLConnection createGraphConnection(String urlString, String accessToken) throws IOException {
-        URL url = new URL(urlString);
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setRequestProperty("Authorization", "Bearer " + accessToken);
-        return conn;
+    private HttpRequest createGraphRequest(String url, String accessToken) {
+        return HttpRequest.newBuilder()
+                .uri(URI.create(url))
+                .header("Authorization", "Bearer " + accessToken)
+                .GET()
+                .build();
     }
 
     private JsonNode fetchUserProfile(String accessToken) {
-        String url = String.format(USER_PROFILE_URL, GRAPH_API_BASE);
+        HttpRequest request = createGraphRequest(USER_PROFILE_URL, accessToken);
 
         try {
-            HttpURLConnection conn = createGraphConnection(url, accessToken);
-            conn.setRequestProperty("Accept", "application/json");
+            HttpResponse<InputStream> response = httpClient.send(request,
+                    HttpResponse.BodyHandlers.ofInputStream());
 
-            int responseCode = conn.getResponseCode();
-            if (responseCode == 200) {
+            int statusCode = response.statusCode();
+            if (statusCode == 200) {
                 log.debug("Successfully called Microsoft Graph API");
-                return mapper.readTree(conn.getInputStream());
+                try (InputStream body = response.body()) {
+                    return mapper.readTree(body);
+                }
             }
 
-            log.error("Microsoft Graph API returned HTTP {}", responseCode);
-            throw new RuntimeException("Failed to fetch user profile: HTTP " + responseCode);
+            log.error("Microsoft Graph API returned HTTP {}", statusCode);
+            throw new GraphApiException("Failed to fetch user profile: HTTP " + statusCode);
 
         } catch (IOException e) {
             log.error("Error calling Microsoft Graph API", e);
-            throw new RuntimeException("Error fetching user profile from Microsoft Graph", e);
+            throw new GraphApiException("Error fetching user profile from Microsoft Graph", e);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new GraphApiException("Interrupted while fetching user profile from Microsoft Graph", e);
         }
     }
 
     @Override
     public String fetchPhotoAsBase64(String accessToken) {
-        String url = String.format(ME_PHOTO_URL, GRAPH_API_BASE);
-        log.debug("Fetching photo from: {}", url);
+        log.debug("Fetching photo from: {}", ME_PHOTO_URL);
+        HttpRequest request = createGraphRequest(ME_PHOTO_URL, accessToken);
 
         try {
-            HttpURLConnection conn = createGraphConnection(url, accessToken);
+            HttpResponse<InputStream> response = httpClient.send(request,
+                    HttpResponse.BodyHandlers.ofInputStream());
 
-            int responseCode = conn.getResponseCode();
-            if (responseCode == 200) {
-                return buildPhotoDataUri(conn);
+            int statusCode = response.statusCode();
+            if (statusCode == 200) {
+                return buildPhotoDataUri(response);
             }
 
-            if (responseCode == 404) {
+            if (statusCode == 404) {
                 log.debug("No photo found for user");
             } else {
-                log.warn("Failed to fetch photo: HTTP {}", responseCode);
+                log.warn("Failed to fetch photo: HTTP {}", statusCode);
             }
             return null;
 
         } catch (IOException e) {
             log.warn("Error fetching photo", e);
             return null;
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            log.warn("Interrupted while fetching photo", e);
+            return null;
         }
     }
 
-    private String buildPhotoDataUri(HttpURLConnection conn) throws IOException {
-        byte[] imageBytes = conn.getInputStream().readAllBytes();
-        log.debug("Successfully fetched photo, size: {} bytes", imageBytes.length);
+    private String buildPhotoDataUri(HttpResponse<InputStream> response) throws IOException {
+        try (InputStream body = response.body()) {
+            byte[] imageBytes = body.readAllBytes();
+            log.debug("Successfully fetched photo, size: {} bytes", imageBytes.length);
 
-        String mimeType = conn.getContentType() != null ? conn.getContentType() : DEFAULT_PHOTO_MIME_TYPE;
-        return String.format(DATA_URI_FORMAT, mimeType, Base64.getEncoder().encodeToString(imageBytes));
+            String mimeType = response.headers().firstValue("Content-Type")
+                    .orElse(DEFAULT_PHOTO_MIME_TYPE);
+            return String.format(DATA_URI_FORMAT, mimeType, Base64.getEncoder().encodeToString(imageBytes));
+        }
     }
 
     private String safeGetText(JsonNode node, String fieldName) {
